# sciwyrm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  settings.json  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml  docker_release.yml  release.yml
docker/: Dockerfile
requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  docs.in  docs.txt  static.txt  test.in  test.txt  wheels.txt
sjng/: config.json
sjng/notebook/: sjng-draft-1.ipynb
sjng/output/: f027c955-73fb-4c80-9439-4f8a2d735432.ipynb
sjng/templates/: sjnt_67ddc126_9a7f_11ee_a1ea_3f215a800ed6.ipynb
src/sciwyrm/: __init__.py  config.py  filters.py  logging.py  main.py  notebook.py  templates.py  typing.py
src/sciwyrm/assets/: __init__.py  notebook_template_v1.ipynb
src/sciwyrm/assets/templates/: __init__.py
src/sciwyrm/assets/templates/notebook/: __init__.py  generic_v1.ipynb
src/sciwyrm/notebook/: __init__.py  v1.py
templates/notebook/: b32f6992-0355-4759-b780-ececd4957c23.ipynb  b32f6992-0355-4759-b780-ececd4957c23.json  generic_v1.ipynb  generic_v1.json
tests/: conftest.py  notebook_test.py  seed.py
tests/notebook/: __init__.py  notebook_test.py  notebook_v1_test.py
