[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "sciwyrm"
description = ""
license = { "file" = "LICENSE" }
authors = [{ name = "Jan-Lukas Wynen" }]
readme = "README.md"
keywords = ["scicat"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi >= 0.108",
    "jinja2",
    "pydantic",
]
dynamic = ["version"]

[project.urls]
"Documentation" = "https://scicatproject.github.io/sciwyrm"
"Bug Tracker" = "https://github.com/SciCatProject/sciwyrm/issues"
"Source" = "https://github.com/SciCatProject/sciwyrm"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = "tests"
addopts = """
--strict-config
--strict-markers
-ra
-v
"""
filterwarnings = [
    "error",
]

[tool.mypy]
plugins = "pydantic.mypy"
mypy_path = "src"
exclude = ["docs/conf.py", "venv"]
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
show_error_codes = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 88
select = ["B", "D", "E", "F", "I", "S", "T20", "PGH", "FBT003", "RUF"]
ignore = [
    "E741", "E742", "E743", # do not use names ‘l’, ‘O’, or ‘I’; they are not a problem with a proper font
    "D105",
]
extend-exclude = [".*", "__pycache__", "build", "dist", "venv"]
fixable = ["I001"]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # asserts are fine in tests
    "D10",  # no docstrings required in tests
]
"tools/*" = ["D10"]
"docs/conf.py" = ["D10"]
"src/sciwyrm/model.py" = ["D10"]
"src/sciwyrm/testing/strategies.py" = ["D401"]

[tool.ruff.isort]
known-first-party = ["sciwyrm"]

[tool.ruff.pydocstyle]
convention = "numpy"
